test_suite/alan-2022-examples/failing/004720_mutation.alan
source K begin leave N4(integer) end
